generate Jython bindings
we should do this only for the model classes and add UI classes in a
in a separate binding file as some of these classes allocate UI resources
which can result in errors (e.g. illegal thread access for SWT things)